--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ header {
   padding: 2rem 1rem;
 }
 
+p {
+  margin-top: 0.5rem;
+}
+
 .tab {
   width: 80%;
   display: flex;
@@ -34,6 +38,7 @@ header {
   border: 1px solid lightgray;
   padding: 1rem;
   border-radius: 0.5rem;
+  margin-top: 2rem;
 }
 
 .hide {
